@@ -1,5 +1,8 @@
 2006-12-17  Matthias Clasen  <mclasen@redhat.com>
 
+	* glib/gstrfuncs.c (g_strndup, g_strnfill): Move docs
+	inline, and improve wording.  (#372598, Behdad Esfahbod)
+
 	* glib/gspawn.c: Add some pointers to the gdk_spawn_
 	variants.  (#338134, Federico Mena Quintero)
 
